# pidos

01.console/: CMakeLists.txt  main.c
02.c_memorymap/: CMakeLists.txt  main.c  memory_study.c  memory_study.h
03.freertos_basic/: CMakeLists.txt  FreeRTOSConfig.h  freertos_basic.c  freertos_basic.h  main.c
04.simple_dos/: CMakeLists.txt  basic.c  commands.c  commands.h  exec.c  main.c  rdisk.c  rdisk.h  service_table.h  util.h
04.simple_dos/app/: build.sh  clean.sh  hello.c
05.freertos_unix/: CMakeLists.txt  FreeRTOSConfig.h  basic.c  basic.h  commands.c  console.c  console.h  exec.c  exec.h  main.c  rdisk.c  rdisk.h  util.c
05.freertos_unix/app/: build.sh  hello.c  user_app.ld
05.freertos_unix/apps/: hello_unix.c
05.freertos_unix/kernel/: proc.c  proc.h  syscall.c  syscall.h  vfs.c  vfs.h
06.freertos_dos/: CMakeLists.txt
06.freertos_dos/src/: main.c
06.freertos_dos/src/dos/: apps.c  cmds_core.c  cmds_core.h  cmds_fs.c  dos.c  shell.c
06.freertos_dos/src/fs/: ramfs.c  ramfs.h
06.freertos_dos/src/util/: strutil.h
06.freertos_dos/src/vfs/: vfs.c  vfs.h
07.picodos_flashfs/: CMakeLists.txt
07.picodos_flashfs/src/dos/: cmds_core.c  cmds_fs.c  dos_sys.c  dos_sys.h  parse.c  parse.h
07.picodos_flashfs/src/fs/: flash_fs.h  ramfs.h
07.picodos_flashfs/src/util/: strutil.c
08.picodos_apprun/: .clang-tidy  .gitignore  CMakeLists.txt
08.picodos_apprun/src/: main.c
08.picodos_apprun/src/apps/: AUTOEXEC.BAT  CMakeLists.txt  app.ld  app_sys.h
08.picodos_apprun/src/apps/hello/: app_hello.c
08.picodos_apprun/src/apps/tools/: mkpxe.py  mkpxe_from_elf.py  mkpxe_gen.py
08.picodos_apprun/src/dos/: apps.h  apps_builtin.c  apps_builtin.h  autoexec.c  autoexec.h  cmds_core.c  cmds_fs.c  cmds_fs.h  dos.c  dos.h  shell.c  shell.h  shell_exec.c  shell_exec.h
08.picodos_apprun/src/fs/: flash_fs.c  ramfs.c  ramfs.h
08.picodos_apprun/src/os/: app_slot.h  svc_handler.c  syscall.h
08.picodos_apprun/src/pxe/: pxe_format.h  pxe_loader.c  pxe_loader.h
08.picodos_apprun/src/vfs/: vfs.c  vfs.h
08.picodos_apprun/src/xfer/: cobs.c  cobs.h  xfer_recv.c  xfer_recv.h
08.picodos_apprun/tools/: send_pxe.py
